Added project files

--- a/src/app/container/create-page/create-page.component.html
+++ b/src/app/container/create-page/create-page.component.html
@@ -7,7 +7,7 @@
         <label for="password">Password<br></label>
         <input type="teyt" class="form-control" id="password" name="password" ngModel>
 
-        <button type="submit" class="btn btn-light">CREATE PARTY</button>
+        <button type="submit" class="btn btn-light" onclick="window.location.href='Party'">CREATE PARTY</button>
     </form>
     <a href="Join">Join another party!</a>
 </div>
