--- a/src/app/container/join-page/join-page.component.html
+++ b/src/app/container/join-page/join-page.component.html
@@ -7,7 +7,7 @@
         <label for="password">Password<br></label>
         <input type="teyt" class="form-control" id="password" name="password" ngModel>
 
-        <button type="submit" class="btn btn-light">JOIN PARTY</button>
+        <button type="submit" class="btn btn-light" onclick="window.location.href='Party'">JOIN PARTY</button>
     </form>
     <a href="Create">Create a party instead!</a>
 </div>
