--- a/src/app/container/login-page/login-page.component.html
+++ b/src/app/container/login-page/login-page.component.html
@@ -7,7 +7,7 @@
         <label for="password">Password <span style="color:red;">*</span><br></label>
         <input type="password" class="form-control" id="password" name="password" ngModel>
 
-        <button type="submit" class="btn btn-light">LOG IN</button>
+        <button type="submit" class="btn btn-light" onclick="window.location.href='Select'">LOG IN</button>
     </form>
     <a href="Register">Don't have an account?</a>
 </div>
