--- a/src/app/container/register-page/register-page.component.html
+++ b/src/app/container/register-page/register-page.component.html
@@ -13,7 +13,7 @@
         <label for="confirmPassword">Confirm password <span style="color:red;">*</span><br></label>
         <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" ngModel>
 
-        <button type="submit" class="btn btn-light">REGISTER</button>
+        <button type="submit" class="btn btn-light" onclick="window.location.href='Login'">REGISTER</button>
     </form>
     <a href="Login">Already have an account?</a>
 </div>
