--- a/src/app/container/settings-page/settings-page.component.html
+++ b/src/app/container/settings-page/settings-page.component.html
@@ -1,1 +1,50 @@
-<p>settings-page</p>
+<div class="login">
+    <form class="form">
+        <h2>Profile information</h2>
+
+        <label for="name">Name</label><br>
+        <input type="text" class="form-control" id="name" name="name" ngModel>
+
+        <label for="username">Username</label><br>
+        <input type="text" class="form-control" id="username" name="username" ngModel>
+
+        <label for="email">Email</label><br>
+        <input type="text" class="form-control" id="email" name="email" ngModel>
+
+        <button type="submit" class="btn btn-light">SAVE</button>
+    </form>
+</div>
+<br>
+
+<div class="login">
+    <form class="form">
+        <h2>Update password</h2>
+        <p>Ensure your account is using a long, random password to stay secure.</p>
+
+        <label for="name">Current password</label><br>
+        <input type="text" class="form-control" id="curretPassnword" name="name" ngModel>
+
+        <label for="name">New password</label><br>
+        <input type="text" class="form-control" id="newPassword" name="name" ngModel>
+
+        <label for="name">Confirm new password</label><br>
+        <input type="text" class="form-control" id="confirmNewPassword" name="name" ngModel>
+
+        <button type="submit" class="btn btn-light">SAVE</button>
+    </form>
+</div>
+<br>
+
+<div class="login">
+    <h2>Platform management</h2>
+    <p>...</p>
+</div>
+<br>
+
+<div class="login">
+    <h2>Delete Account</h2>
+    <p>Once your account is deleted, all of its resources and data Will be permanently deleted.<br>
+    Before deleting your account, please download any data or information that you wish to retain.</p>
+    <button type="submit" class="btn btn-warning">DELETE ACCOUNT</button>
+</div>
+
