--- a/src/app/container/create-page/create-page.component.html
+++ b/src/app/container/create-page/create-page.component.html
@@ -1,10 +1,10 @@
 <h1>Create party</h1>
 <div class="login">
-    <form class="form" (ngSubmit)="Create()" #registerForm="ngForm">
-        <label for="partyName">Party name <span style="color:red;">*</span><br></label>
+    <form class="form" #createForm="ngForm" (ngSubmit)="Create(createForm)">
+        <label for="partyName">Party name <span style="color:red;">*</span></label><br>
         <input type="text" class="form-control" id="partyName" name="partyName" ngModel>
 
-        <label for="password">Password<br></label>
+        <label for="password">Password</label><br>
         <input type="teyt" class="form-control" id="password" name="password" ngModel>
 
         <button type="submit" class="btn btn-light" onclick="window.location.href='Party'">CREATE PARTY</button>
