--- a/src/app/container/form-design.css
+++ b/src/app/container/form-design.css
@@ -3,14 +3,14 @@
 }
 
 .form-control {
-    background-color: #111827;
+    background-color: #1F2937;
     color: white;
     margin-bottom: 10px;
     border: 0;
     padding: 5px;
 }
 
-a {
+a, label {
     color: #9CA3AF;
 }
 
