--- a/src/app/container/welcome-page/welcome-page.component.html
+++ b/src/app/container/welcome-page/welcome-page.component.html
@@ -1,5 +1,5 @@
 <div class="center">
     <img src="/assets/images/logo.png" width="100" height="100" class="svg-white">
     <h1>Welcome to our party page!</h1>
-    <a href="Select">I want to party</a>
+    <a href="Login">I want to party</a>
 </div>
