--- a/src/app/header/top-menu/top-menu.component.html
+++ b/src/app/header/top-menu/top-menu.component.html
@@ -1,4 +1,4 @@
 <div class="top-menu">
     <a href="Home">Home</a>
-    <a href="Select">Party time</a>
+    <a href="Login">Party time</a>
 </div>
