--- a/src/app/container/register-page/register-page.component.html
+++ b/src/app/container/register-page/register-page.component.html
@@ -1,20 +1,23 @@
 <h1>Register</h1>
-<div class="login">
+<div class="formContainer">
     <form class="form" #registerForm="ngForm" (ngSubmit)="Register(registerForm)">
         <label for="username">Username <span style="color:red;">*</span></label><br>
-        <input type="text" class="form-control" id="username" name="username" ngModel>
+        <input type="text" class="form-control" id="username" name="username" ngModel required minlength="3" maxlength="32" pattern="[A-Z]|[a-z]|[0-9]|_">
 
         <label for="email">Email <span style="color:red;">*</span></label><br>
-        <input type="email" class="form-control" id="email" name="email" ngModel>
+        <input type="email" class="form-control" id="email" name="email" ngModel required email>
 
         <label for="password">Password <span style="color:red;">*</span></label><br>
-        <input type="password" class="form-control" id="password" name="password" ngModel>
+        <input type="password" class="form-control" id="password" name="password" ngModel required minlength="6" pattern="^\S*$" onchange="CompareFields('password','confirmPassword',true)">
 
         <label for="confirmPassword">Confirm password <span style="color:red;">*</span></label><br>
-        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" ngModel>
+        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" ngModel required minlength="6" pattern="^\S*$" onchange="CompareFields('password','confirmPassword',true)">
 
-        <button type="submit" class="btn btn-light" >REGISTER</button>
+        <button type="submit" class="btn btn-light"  [disabled]="!registerForm.valid">REGISTER</button>
     </form>
     <a href="Login">Already have an account?</a>
 </div>
-<a href="" class="go-back"><img src="/assets/icons/arrow-left-short.svg" alt="Bootstrap" width="32" height="32" class="svg-black">Go back</a>
+<a href="" class="go-back"><img src="/assets/icons/arrow-left-short.svg" onclick="window.location.href='Login'" alt="Bootstrap" width="32" height="32" class="svg-black">Go back</a>
+
+<!--TODO: password check-->
+<!--TODO: account check-->
