--- a/src/app/container/join-page/join-page.component.html
+++ b/src/app/container/join-page/join-page.component.html
@@ -1,13 +1,13 @@
 <h1>Join party</h1>
-<div class="login">
+<div class="formContainer">
     <form class="form" #joinForm="ngForm" (ngSubmit)="Join(joinForm)">
         <label for="partyName">Party name <span style="color:red;">*</span></label><br>
-        <input type="text" class="form-control" id="partyName" name="partyName" ngModel>
+        <input type="text" class="form-control" id="partyName" name="partyName" ngModel required minlength="3" maxlength="32" pattern="[A-Z]|[a-z]|[0-9]|_">
 
         <label for="password">Password</label><br>
         <input type="teyt" class="form-control" id="password" name="password" ngModel>
 
-        <button type="submit" class="btn btn-light" onclick="window.location.href='Party'">JOIN PARTY</button>
+        <button type="submit" class="btn btn-light" onclick="window.location.href='Party'" [disabled]="!joinForm.valid">JOIN PARTY</button>
     </form>
     <a href="Create">Create a party instead!</a>
 </div>
